fix: overflow removed in order to show popover

--- a/src/shellbar.scss
+++ b/src/shellbar.scss
@@ -52,7 +52,6 @@ $block: #{$fd-namespace}-shellbar;
     display: flex;
     align-items: center;
     flex: 1 1 0;
-    overflow: hidden;
 
     &--product {
       justify-content: flex-start;
